-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: 8.1.0-rc0, 8.0.0
-
Component/s: None
-
None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
v8.0
-
CAR Team 2025-02-17
-
(copied to CRM)
-
2
-
None
-
3
-
None
-
None
-
None
-
None
-
None
-
None
The problem
The ticket introduced a regression from v7.0 to v8.0. A response { ok : true } is returned for collmod as opposed to {ok : 1 } in v7.0. A client discovered the problem after an upgrade, expecting specifically { ok : 1 }.
Our testing infrastructure doesn't capture the problem as "ok: true" is parsed correctly by the javascript drivers to check when a command worked.
The cause
SERVER-84560 added this helper to forward to the user specific errors related to collmod for index changes after running on the participants. The helper is attaching { ok : true } at every response when no issues are present.
Solution
An easy fix here would be to forward the response only when there's an error, that would delegate the shardsvr command to attach { ok : 1 } when the coordinator succeeds.
- related to
-
SERVER-84560 collMod output should be compatible with replica-set when called against unsplittable collections
-
- Closed
-