SERVER-99618 Collmod returns { ok: true } instead of { ok: 1 } in v8.0, breaking backward compatibility (#32307)

GitOrigin-RevId: ecdd2528565c99f093c60db0f7376135e11d422c